A Test of the IDE + SNACKS + A Debugger and Clang-Format

--- a/.luarc.json
+++ b/.luarc.json
@@ -1,1 +1,6 @@
-{ "diagnostics.globals": ["vim"] }
+{ "diagnostics.globals": ["vim"],
+    "diagnostics.disable": [
+        "missing-fields",
+        "redundant-parameter",
+        "undefined-field"
+    ] }
